feat(splash): :sparkles: enhance splash screen with loading text and responsive image sizing

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,3 +22,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/
+  fonts:
+    - family: Burrito
+      fonts:
+        - asset: assets/fonts/burrito.ttf
