--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_riverpod: ^2.6.1
+  flutter_zoom_drawer: ^3.2.0
 
 dev_dependencies:
   ansicolor: ^2.0.3
