feat(menu): :sparkles: refactor menu controller to use Notifier and enhance menu widget with navigation functionality

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "conventionalCommits.scopes": [
         "splash",
-        "commit-validator"
+        "commit-validator",
+        "menu"
     ]
 }
