feat(database): :sparkles: integrate Isar database with models for board games, modules, and tiles; add database provider and notifier for tile management

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -9,6 +9,17 @@
 				"run",
 				"dart_pre_commit"
 			],
+		},
+		{
+			"label": "$(group-by-ref-type) Build runner",
+			"type": "dart",
+			"command": "dart",
+			"args": [
+				"run",
+				"build_runner",
+				"build",
+				"--delete-conflicting-outputs"
+			],
 		}
 	]
 }
