chore: :wrench: update .gitignore to include wildcard patterns for generated plugin files; remove obsolete generated files for Linux, macOS, and Windows

--- a/.gitignore
+++ b/.gitignore
@@ -46,9 +46,6 @@ app.*.map.json
 *.g.dart
 
 # Generated Plugin List
-
-linux/flutter/generated_plugin_registrant.cc
-linux/flutter/generated_plugins.cmake
-macos/Flutter/GeneratedPluginRegistrant.swift
-windows/flutter/generated_plugin_registrant.cc
-windows/flutter/generated_plugins.cmake
+/linux/flutter/generated_plugin*
+/macos/Flutter/GeneratedPluginRegistrant.swift
+/windows/flutter/generated_plugin*
