feat(theme): :sparkles: update font settings to include new 'Agenda' font and rename 'labelFont' to 'headerFont'; adjust text styles accordingly

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "conventionalCommits.scopes": [
         "splash",
         "commit-validator",
-        "menu"
+        "menu",
+        "database"
     ]
 }
