fix(splash): :bug: fix issue with showing SnackBar before build completion

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "splash",
         "commit-validator",
         "menu",
-        "database"
+        "database",
+        "assets"
     ]
 }
