--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,7 @@ environment:
   sdk: ^3.5.4
 
 dependencies:
+  dynamic_height_grid_view: ^0.0.4
   flutter:
     sdk: flutter
   flutter_riverpod: ^2.6.1
