--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ flutter:
   assets:
     - assets/images/
     - assets/images/tiles/
+    - assets/images/tiles/description/
     - assets/initial_data/
   fonts:
     - family: Burrito
