--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   path_provider: ^2.1.5
   shared_preferences: ^2.3.3
   syncfusion_flutter_pdfviewer: ^27.2.2
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   ansicolor: ^2.0.3
