--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: cacao_boardgame_helper
-description: "A new Flutter project."
+description: "A Flutter app to assist players of the Cacao board game and its expansions by providing digital tools for score tracking, rule consultation, and game management."
 publish_to: 'none'
 version: 0.1.0
 
