feat(game_setup): :sparkles: add DetailedPreparationWidget for displaying game preparation details

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ flutter:
     - assets/images/tiles/
     - assets/images/tiles/description/
     - assets/images/boardgames/
+    - assets/images/preparation/
     - assets/initial_data/
     - assets/rules/
   fonts:
