--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,4 +1,12 @@
-include: package:flutter_lints/flutter.yaml
+include: package:very_good_analysis/analysis_options.yaml
+
 analyzer:
-  plugins:
-    - custom_lint
+  errors:
+    public_member_api_docs: ignore
+  exclude:
+    - "**/*.g.dart"
+
+linter:
+  rules:
+    lines_longer_than_80_chars:
+      - 120
