--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,7 @@
 name: cacao_boardgame_helper
-description: "A Flutter app to assist players of the Cacao board game and its expansions by providing digital tools for score tracking, rule consultation, and game management."
+description: "A Flutter app to assist players of the Cacao board game and its
+  expansions by providing digital tools for score tracking, rule consultation,
+  and game management."
 publish_to: 'none'
 version: 0.1.0
 
@@ -28,9 +30,7 @@ dependencies:
 dev_dependencies:
   ansicolor: ^2.0.3
   build_runner: ^2.4.13
-  custom_lint: ^0.7.0
   dart_pre_commit: ^5.4.0
-  flutter_lints: ^5.0.0
   flutter_test:
     sdk: flutter
   git_hooks: ^1.0.1
@@ -38,6 +38,7 @@ dev_dependencies:
     hosted: https://pub.isar-community.dev
     version: 3.1.8
   riverpod_lint: ^2.6.3
+  very_good_analysis: ^6.0.0
 
 flutter:
   uses-material-design: true
@@ -61,3 +62,6 @@ flutter:
           weight: 300
         - asset: assets/fonts/agenda_mediumcondensed.ttf
           weight: 500
+
+dart_pre_commit:
+  outdated: false
