--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -20,6 +20,9 @@ jobs:
       - name: Check outdated dependencies
         run: dart pub outdated | grep -q 'upgradable' && exit 1 || exit 0
 
+      - name: Build Runner
+        run: dart run build_runner build --delete-conflicting-outputs
+
       - name: Analyze
         run: flutter analyze
 
